samples/python/tilengine.py


	def delete(self):
		"""
		Destroys the object and releases unmanaged resources		 
		"""
		ok = _tln.TLN_DeleteBitmap(self)
		_raise_exception(ok)


# sequences management --------------------------------------------------------
_tln.TLN_CreateSequence.argtypes = [c_char_p, c_int, c_int, POINTER(SequenceFrame)]
_tln.TLN_CreateSequence.restype = c_void_p
_tln.TLN_CreateCycle.argtypes = [c_char_p, c_int, POINTER(ColorStrip)]
_tln.TLN_CreateCycle.restype = c_void_p
_tln.TLN_CloneSequence.argtypes = [c_void_p]
_tln.TLN_CloneSequence.restype = c_void_p
_tln.TLN_DeleteSequence.argtypes = [c_void_p]
_tln.TLN_DeleteSequence.restype = c_bool


class Sequence(object):
	"""
	The Sequence object holds the sequences to feed the animation engine
	"""
	def __init__(self, handle):
		self._as_parameter_ = handle

	@classmethod
	def create_sequence(cls, name, target, frames):
		"""
		Static method that creates an empty Sequence for Sprite and Tileset animations
		:param name: String with an unique name to identify the sequence inside a SequencePack object
		:param target: For Tileset animations, the tile index to animate
		:param frames: List with SequenceFrame objects, one for each frame of animation 
		:return: instance of the created object 
		"""
		handle = _tln.TLN_CreateSequence(_encode_string(name), target, len(frames), frames)
		if handle is not None:
			return Sequence(handle)
		else:
			_raise_exception()

	@classmethod
	def create_cycle(cls, name, strips):
		"""
		Static method that creates an empty Sequence for Palette animations
		:param name: String with an unique name to identify the sequence inside a SequencePack object 
		:param strips: List with ColorStrip objects, one for each frame of animation
		:return: instance of the created object 
		"""
		handle = _tln.TLN_CreateCycle(_encode_string(name), len(strips), strips)
		if handle is not None:
			return Sequence(handle)
		else:
			_raise_exception()

	def clone(self):
		"""
		Creates a copy of the object
		:return: instance of the copy
		"""
		handle = _tln.TLN_CloneSequence(self)
		if handle is not None:
			return Sequence(handle)
		else:
			_raise_exception()

	def delete(self):
		"""
		Destroys the object and releases unmanaged resources
		"""
		ok = _tln.TLN_DeleteSequence(self)
		_raise_exception(ok)


# sequence pack management --------------------------------------------------------
_tln.TLN_CreateSequencePack.restype = c_void_p
_tln.TLN_LoadSequencePack.argtypes = [c_char_p]
_tln.TLN_LoadSequencePack.restype = c_void_p
_tln.TLN_FindSequence.argtypes = [c_void_p, c_char_p]
_tln.TLN_FindSequence.restype = c_void_p
_tln.TLN_GetSequence.argtypes = [c_int]
_tln.TLN_GetSequence.restype = c_void_p
_tln.TLN_GetSequencePackCount.argtypes = [c_void_p]
_tln.TLN_GetSequencePackCount.restype = c_int
_tln.TLN_AddSequenceToPack.argtypes = [c_void_p, c_void_p]
_tln.TLN_AddSequenceToPack.restype = c_bool
_tln.TLN_DeleteSequencePack.argtypes = [c_void_p]
_tln.TLN_DeleteSequencePack.restype = c_bool


class SequencePack(object):
	"""
	The SequencePack object holds a collection of Sequence objects
	"""
	def __init__(self, handle):
		self._as_parameter_ = handle
		self.count = _tln.TLN_GetSequencePackCount(self)

	@classmethod
	def create(cls):
		"""
		Static method that creates an empty SequencePack object
		:return: instance of the created object 
		"""
		handle = _tln.TLN_CreateSequencePack()
		if handle is not None:
			return SequencePack(handle)
		else:
			_raise_exception()

	@classmethod
	def fromfile(cls, filename):
		"""
		Static method that loads a SQX file with sequence data (XML-based)
		:param filename: Name of the SQX file to load
		:return: instance of the created object 
		"""
		handle = _tln.TLN_LoadSequencePack(_encode_string(filename))
		if handle is not None:
			return SequencePack(handle)
		else:
			_raise_exception()

	def find_sequence(self, name):
		"""
		Finds a Sequence by its name
		:param name: name of the Sequence to find
		:return: Sequence object if found, or None if error
		"""
		handle = _tln.TLN_FindSequence(self, _encode_string(name))
		if handle is not None:
			return Sequence(handle)
		else:
			_raise_exception()

	def add_sequence(self, sequence):
		"""
		Adds a Sequence to a SequencePack
		:param sequence: Sequence object to add
		"""
		ok = _tln.TLN_AddSequenceToPack(self, sequence)
		_raise_exception(ok)

	def delete(self):
		"""
		Destroys the object and releases unmanaged resources
		"""
		ok = _tln.TLN_DeleteSequencePack(self)
		_raise_exception(ok)


# layer management ------------------------------------------------------------
_tln.TLN_SetLayer.argtypes = [c_int, c_void_p, c_void_p]
_tln.TLN_SetLayer.restype = c_bool
_tln.TLN_SetLayerPalette.argtypes = [c_int, c_void_p]
_tln.TLN_SetLayerPalette.restype = c_bool
_tln.TLN_SetLayerPosition.argtypes = [c_int, c_int, c_int]
_tln.TLN_SetLayerPosition.restype = c_bool
_tln.TLN_SetLayerScaling.argtypes = [c_int, c_float, c_float]
_tln.TLN_SetLayerScaling.restype = c_bool
_tln.TLN_SetLayerTransform.argtypes = [c_int, c_float, c_float, c_float, c_float, c_float]
_tln.TLN_SetLayerTransform.restype = c_bool
_tln.TLN_SetLayerPixelMapping.argtypes = [c_int, POINTER(PixelMap)]
_tln.TLN_SetLayerPixelMapping.restype = c_bool
_tln.TLN_ResetLayerMode.argtypes = [c_int]
_tln.TLN_ResetLayerMode.restype = c_bool
_tln.TLN_SetLayerBlendMode.argtypes = [c_int, c_int, c_ubyte]
_tln.TLN_SetLayerBlendMode.restype = c_bool
_tln.TLN_SetLayerColumnOffset.argtypes = [c_int, POINTER(c_int)]
_tln.TLN_SetLayerColumnOffset.restype = c_bool
_tln.TLN_SetLayerClip.argtypes = [c_int, c_int, c_int, c_int, c_int]
_tln.TLN_SetLayerClip.restype = c_bool
_tln.TLN_DisableLayerClip.argtypes = [c_int]
_tln.TLN_DisableLayerClip.restype = c_bool
_tln.TLN_SetLayerMosaic.argtypes = [c_int, c_int, c_int]
_tln.TLN_SetLayerMosaic.restype = c_bool
_tln.TLN_DisableLayerMosaic.argtypes = [c_int]
_tln.TLN_DisableLayerMosaic.restype = c_bool
_tln.TLN_DisableLayer.argtypes = [c_int]
_tln.TLN_DisableLayer.restype = c_bool
_tln.TLN_GetLayerPalette.argtypes = [c_int]
_tln.TLN_GetLayerPalette.restype = c_void_p
_tln.TLN_GetLayerTile.argtypes = [c_int, c_int, c_int, POINTER(TileInfo)]
_tln.TLN_GetLayerTile.restype = c_bool
_tln.TLN_GetLayerWidth.argtypes = [c_int]
_tln.TLN_GetLayerWidth.restype = c_int
_tln.TLN_GetLayerHeight.argtypes = [c_int]
_tln.TLN_GetLayerHeight.restype = c_int


class Layer(object):
	"""
	The Layer object manages each tiled background plane
	"""
	def __init__(self, index):
		self._as_parameter_ = index
		self.width = 0
		self.height = 0

	def setup(self, tilemap, tileset=None):
		"""
		Enables a background layer by setting the specified tilemap and optional tileset
		:param tilemap: Tilemap object with background layout 
		:param tileset: Optional Tileset object. If not set, the Tilemap's own Tileset is selected
		"""
		ok = _tln.TLN_SetLayer(self, tileset, tilemap)
		if ok is True:
			self.width = _tln.TLN_GetLayerWidth(self)
			self.height = _tln.TLN_GetLayerHeight(self)
			return ok
		else:
			_raise_exception()

	def set_palette(self, palette):
		"""
		Sets the color palette to the layer
		:param palette: Palette object to assign. By default the Tileset's own palette is used
		"""
		ok = _tln.TLN_SetLayerPalette(self, palette)
		_raise_exception(ok)

	def set_position(self, x, y):
		"""
		Sets the position of the tileset that corresponds to the upper left corner of the viewport
		:param x: horizontal position
		:param y: vertical position
		"""
		ok = _tln.TLN_SetLayerPosition(self, int(x), int(y))
		_raise_exception(ok)

	def set_scaling(self, sx, sy):
		"""
		Enables layer scaling
		:param sx: floating-point value with horizontal scaling factor
		:param sy: floating-point value with vertical scaling factor
		"""
		ok = _tln.TLN_SetLayerScaling(self, sx, sy)
		_raise_exception(ok)

	def set_transform(self, angle, x, y, sx, sy):
		"""
		Enables layer affine transformation (rotation and scaling). All parameters are floating point values
		:param angle: rotation angle in degrees
		:param x: horizontal displacement in screen space where the rotation center is located
		:param y: vertical displacement in screen space where the rotation center is located 
		:param sx: horizontal scaling factor
		:param sy: vertical scaling factor
		"""
		ok = _tln.TLN_SetLayerTransform(self, angle, x, y, sx, sy)
		_raise_exception(ok)

	def set_pixel_mapping(self, pixel_map):
		"""
		Enables pixel mapping displacement table
		:param pixel_map: user-provided list of PixelMap objects of hres*vres size: one item per screen pixel
		"""
		ok = _tln.TLN_SetLayerPixelMapping(self, pixel_map)
		_raise_exception(ok)

	def reset_mode(self):
		"""
		Disables all special effects: scaling, affine transform and pixel mapping, and returns to default render mode.
		"""
		ok = _tln.TLN_ResetLayerMode(self)
		_raise_exception(ok)

	def set_blend_mode(self, mode):
		"""
		Enables blending mode with background objects
		:param mode: One of the class Blend::xxx defined values 
		"""
		ok = _tln.TLN_SetLayerBlendMode(self, mode, 0)
		_raise_exception(ok)

	def set_column_offset(self, offsets):
		"""
		Enables column offset mode for tiles
		:param offsets: User-provided list of integers with offsets, one per column of tiles. Pass None to disable
		"""
		ok = _tln.TLN_SetLayerColumnOffset(self, offsets)
		_raise_exception(ok)

	def set_clip(self, x1, y1, x2, y2):
		"""
		Enables clipping rectangle
		:param x1: left coordinate
		:param y1: top coordinate
		:param x2: right coordinate
		:param y2: bottom coordinate
		"""
		ok = _tln.TLN_SetLayerClip(self, x1, y1, x2, y2)
		_raise_exception(ok)

	def disable_clip(self):
		"""
		Disables clipping rectangle
		"""
		ok = _tln.TLN_DisableLayerClip(self)
		_raise_exception(ok)

	def set_mosaic(self, pixel_w, pixel_h):
		"""
		Enables mosaic effect (pixelation)
		:param pixel_w: horizontal pixel size
		:param pixel_h: vertical pixel size
		"""
		ok = _tln.TLN_SetLayerMosaic(self, pixel_w, pixel_h)
		_raise_exception(ok)

	def disable_mosaic(self):
		"""
		Disables mosaic effect
		"""
		ok = _tln.TLN_DisableLayerMosaic(self)
		_raise_exception(ok)

	def disable(self):
		"""
		Disables the layer so it is not drawn
		"""
		ok = _tln.TLN_DisableLayer(self)
		_raise_exception(ok)

	def get_palette(self):
		"""
		Gets the layer active palette
		:return: Palette object of the Layer
		"""
		handle = _tln.TLN_GetLayerPalette(self)
		if handle is not None:
			return Palette(handle)
		else:
			_raise_exception()

	def get_tile(self, x, y, tile_info):
		"""
		Gets detailed info about the tile located in Tilemap space
		:param x: x position inside the Tilemap
		:param y: y position inside the Tilemap
		:param tile_info: User-provided TileInfo object where to get the data 
		"""
		ok = _tln.TLN_GetLayerTile(self, x, y, tile_info)
		_raise_exception(ok)

